crates/reinhardt-pages/tests/ui/form/fail/datalist_rejects_missing_options_source.rs
use reinhardt_pages::form;

fn main() {
	let _form = form! {
		name: InvalidDatalistSourceForm,
		action: "/invalid",
		fields: {
			suggestions: Datalist {}
		}
	};
}
